src/index.css
/* ... */
.sidebarTab::after {
    content: '';
    z-index: -1;
    width: 100%;
    height: 100%;
    position: absolute;
    border-radius: 5px;
    box-shadow: 0px 2px 6px 0px rgba(0,0,0,0.17);
    opacity: 0;
    transition: all 0.2s ease-in-out;
}



.sidebarTab:hover {
    color: var(--primary-text-color);
}

.sidebarTab:hover::after {
    opacity: 1;
}

.sidebarTab.viewing {
    color: var(--primary-text-color);
    background-color: var(--tertiary-bg-color);

}

.sidebarTab p {
    pointer-events: none;
    margin-right: max(3.5vw, 40px);
}

.sidebarTab.viewing p{
    font-weight: 600;
}

.sidebarTab.viewing:hover::after {
    opacity: 0;
}

.sidebarTab.viewing ion-icon {
    color: var(--primary-blue)
}

.sidebarTab.viewing svg {
    filter: sepia(100%) saturate(400%) hue-rotate(185deg) brightness(90%) contrast(100%)
}

.sidebarArrow {
    color: var(--secondary-text-color);
    cursor: pointer;
    transition: all 0.2s ease-in-out;
}

.sidebarArrow:hover {
    color: var(--primary-text-color);
}


.sidebarArrow.close {
    transform: rotate(-90deg);
}

.sidebarCount {
    position: fixed;
    font-weight: 400;
    font-size: clamp(10px, 1vw, 13px);
    right: 10px;
}

.sidebarTab.viewing .sidebarCount {
    color: var(--secondary-text-color);
}

.sidebarTitle {
    display: flex;
    align-items: center;
    font-weight: 700;
    margin-top: 20px;
    color: var(--primary-text-color);
    transform: translateX(-1px);
}


/* TASKS CONTAINER */

.tasksContainer {
    height: calc(100vh - 200px);
    width: 25vw;
    position: absolute;
    top: 90px;
    left: calc(50vw - 12.5vw);
    /*transition: all 0.3s cubic-bezier(0.5, 0, 0.5, 1);
    animation: bottomTopBounce 0.5s cubic-bezier(0, 0.5, 0.5, 1);*/
}

.tasksTitle {
    width: auto;
    font-size: clamp(24px, 1.6vw, 30px);
    font-weight: 800;
    margin-bottom: 15px;
    white-space: nowrap;
}
/*
@keyframes bottomTopBounce {
    0% {
        opacity: 0;
        transform:translateY(10vh); 
    }
    100% {
        opacity: 1;
        transform: translateY(0);
    }
}
*/

@keyframes tasksContainerShiftLeft {
    0% {transform:translateX(30%)}
    50% {transform: translateX(-30%)}
}


/* SUB-GROUP */

.subGroup {
    margin-top: clamp(5px,1vw,20px);
}

.subGroup.empty .subGroupTitle::after {
    font-weight: 500;
    content: '-No tasks-';
    width: max-content;
    position: absolute;
    left: 15px;
    transform: translate(15px, 45px);
    animation: emptySubGroupFadeIn 0.1s ease-in-out;
}

@keyframes emptySubGroupFadeIn {
    0% { opacity: 0 }
    100% { opacity: 1 } 
}


.subGroupTitle {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 29px;
    width: max-content;
    padding: 0px 12px;
    font-weight: 700;
    font-size: clamp(16px, 1.2vw, 18px);
    color: #697384bd;
    border-radius: 5px;
    background-color: #bec7d542;
    margin-bottom: clamp(5px,1vw,20px);
}

.subGroupTitle.overdue {
    color: #f07070;
    background-color: #ffdbdb;
}

/* TASK CONTAINER */

.taskContainer {
    cursor: pointer;
    display: grid;
    height: 60px;
    width: max(100%, 250px);
    grid-template: 30px 30px/40px auto 40px;
    border-radius: 5px;
    /*transition: box-shadow ease-in-out 0.2s;*/
}

ul,
li {
  list-style: none;
  padding: 0;
  margin: 0;
}
ul {
    width: max(90%, 250px);
}


/*
.taskContainer::after {
    z-index: -1;
    content: '';
    width: 100%;
    height: 100%;
    position: absolute;
    border-radius: 5px;

    opacity: 0;
    background-color: white;
    transition: all 0.2s ease-in-out;
    border: 1.5px solid rgba(255, 255, 255, 0);
}
*/
/*
.taskContainer:hover {
    box-shadow: 0px 1px 6px 0px rgba(0,0,0,0.17);
}

.taskContainer:hover > .deleteContainer {
    opacity: 1;
}

/*
.taskContainer:hover::after {
     opacity: 1;
}
*/
.taskContainer.viewing::after {
    opacity: 1;
    border: 1.5px solid var(--primary-blue);
}

.completed div{
    color: var(--tertiary-text-color);
}

.checkContainer {
    display: flex;
    align-items: center;
    justify-content: center;
    transition: all ease-in-out 0.2s;
}

.taskContainer.completed .checkContainer {
    filter: var(--secondary-svg-color);
}

.checkContainer svg {
    transition: all ease-in-out 0.2s;
}

.checkContainer svg:hover {
    filter: var(--secondary-svg-color);
}

.nameContainer {
    pointer-events: none;
    display: flex;
    align-items: center;
    margin: 8px 5px 8px 0;
    height: 14px;
    white-space: nowrap;
    font-weight: 600;
    font-size: clamp(14px, 1.2vw, 17px);
    color: var(--primary-text-color);
    background-image: linear-gradient(to bottom,
        #00000000 50%,
        var(--tertiary-text-color) 50%, 
        var(--tertiary-text-color) 60%,
        #00000000 60%
    );
    background-size: 0 100%;
    background-repeat: no-repeat;
    transition: 0.4s ease;
}

.taskContainer.completed .nameContainer {
    background-size: 100% 100%;
}

.deleteContainer {
    /*position: absolute;*/
    display: flex;
    align-items: center;
    justify-content: center;
    filter: var(--secondary-svg-color);
    transition: opacity ease-in-out 0.3s;
}/*
.taskContainer.completed .deleteContainer {
    opacity: 1;
}
*/
.descriptionContainer {
    pointer-events: none;

    grid-column-start: 2;
    width: auto;
    height: 30px;
    font-weight: 400;
    font-size: clamp(12px, 1.1vw, 16px);
    color: var(--secondary-text-color);
    white-space: nowrap;
    overflow-X: hidden;
}


/* TASK VIEW */

.taskViewContainer {
    position: absolute;
    top: 140px;
    right: 0;
    height: max(20vw,300px);
    width: clamp(250px, 22vw, 370px);
    font-size: clamp(14px, 1.1vw, 16px);
    border-radius: 10px;
    opacity: 0;
    box-shadow: -2px 2px 6px 0px rgba(0,0,0,0.15);
    padding: 20px;
    transition: all 0.25s cubic-bezier(0,.5,.5,1);
}

@keyframes slideOutTaskView {
    100% {
        transform: translateX(0);
        opacity: 0;
    }
}
/* ... */

